[gd_scene load_steps=8 format=2]

[ext_resource path="res://level/Game.gd" type="Script" id=1]
[ext_resource path="res://level/TestLevel.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/hud-stats/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/hud-stats/MusicBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/hud-stats/ExperienceBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://characters/player/player.tscn" type="PackedScene" id=6]
[ext_resource path="res://interface/SaveAndLoad.tscn" type="PackedScene" id=7]

[node name="Game" type="Node"]
script = ExtResource( 1 )
level = ExtResource( 2 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="PlayerStats" type="VBoxContainer" parent="UI"]
editor/display_folded = true
margin_left = 16.0
margin_top = 16.0
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/separation = 8

[node name="HealthBar" parent="UI/PlayerStats" instance=ExtResource( 3 )]
pause_mode = 2
margin_right = 600.0
margin_bottom = 48.0

[node name="MusicBar" parent="UI/PlayerStats" instance=ExtResource( 4 )]
margin_top = 56.0
margin_right = 600.0
margin_bottom = 104.0

[node name="ExperienceBar" parent="UI/PlayerStats" instance=ExtResource( 5 )]
margin_top = 112.0
margin_right = 600.0
margin_bottom = 160.0

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 104.692, 740 )

[node name="SaveAndLoad" parent="." instance=ExtResource( 7 )]

[connection signal="experience_gained" from="Player" to="UI/PlayerStats/ExperienceBar" method="_on_Player_experience_gained"]
[connection signal="health_changed" from="Player" to="UI/PlayerStats/HealthBar" method="_on_Player_health_changed"]
[connection signal="music_level_changed" from="Player" to="UI/PlayerStats/MusicBar" method="_on_Player_music_level_changed"]
