[gd_scene load_steps=12 format=2]

[ext_resource path="res://level/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/music.ogg" type="AudioStream" id=2]
[ext_resource path="res://level/Level.gd" type="Script" id=3]
[ext_resource path="res://interface/PlayerStats.tscn" type="PackedScene" id=4]
[ext_resource path="res://vfx/TransitionColor.tscn" type="PackedScene" id=5]
[ext_resource path="res://save/SavesPopup.tscn" type="PackedScene" id=6]
[ext_resource path="res://interface/PauseMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://interface/GameOverScreen.tscn" type="PackedScene" id=8]
[ext_resource path="res://interface/SettingsMenu.tscn" type="PackedScene" id=9]
[ext_resource path="res://interface/SaveAndLoad.tscn" type="PackedScene" id=10]
[ext_resource path="res://interface/MainMenu.tscn" type="PackedScene" id=11]

[node name="Game" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 2 )
autoplay = true

[node name="Level" type="Node" parent="."]
pause_mode = 1
script = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="PlayerStats" parent="UI" instance=ExtResource( 4 )]

[node name="TransitionColor" parent="UI" instance=ExtResource( 5 )]

[node name="SavesPopup" parent="UI" instance=ExtResource( 6 )]
margin_right = 500.0
margin_bottom = 400.0

[node name="PauseMenu" parent="UI" instance=ExtResource( 7 )]

[node name="GameOverScreen" parent="UI" instance=ExtResource( 8 )]
visible = false

[node name="SettingsMenu" parent="UI" instance=ExtResource( 9 )]
visible = false

[node name="SaveAndLoad" parent="." instance=ExtResource( 10 )]

[node name="MainMenu" parent="." instance=ExtResource( 11 )]
